@@ -3,3 +3,6 @@
 
 added std::optional for c++17 or greater
 11/12/2023
+
+added documentation, added ostream operator for printing ray
+11/12/2023
